--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 </head>
 
 <body>
-  Improve your front-end skills by building projects
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+<div class="container">
+<img class="qr-code" src="images/image-qr-code.png" alt="qr-code" width="288px" height="auto">
+<p>Improve your front-end skills by building projects</p>
+<p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+</div>
+<div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  Coded by <a href="#">Your Name Here</a>.
+</div>
 </body>
 </html>
 
