--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
 <div class="container">
-<img class="qr-code" src="images/image-qr-code.png" alt="qr-code" width="288px" height="auto">
-<p>Improve your front-end skills by building projects</p>
-<p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+<img class="container__qr-code" src="images/image-qr-code.png" alt="qr-code" width="288px" height="auto">
+<p class="focus-text">Improve your front-end skills by building projects</p>
+<p class="grey-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 </div>
 <div class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
